After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742111 - Misc memory leak fixes
Misc memory leak fixes
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-12-30 10:23 UTC by Cosimo Cecchi
Modified: 2015-01-06 01:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GnomeRROutputInfo: plug some memory leaks (901 bytes, patch)
2014-12-30 10:23 UTC, Cosimo Cecchi
committed Details | Review
languages: plug memory leaks (811 bytes, patch)
2014-12-30 10:23 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2014-12-30 10:23:04 UTC
See patches
Comment 1 Cosimo Cecchi 2014-12-30 10:23:07 UTC
Created attachment 293469 [details] [review]
GnomeRROutputInfo: plug some memory leaks
Comment 2 Cosimo Cecchi 2014-12-30 10:23:20 UTC
Created attachment 293470 [details] [review]
languages: plug memory leaks
Comment 3 Bastien Nocera 2015-01-05 12:35:45 UTC
Review of attachment 293469 [details] [review]:

Yes.
Comment 4 Bastien Nocera 2015-01-05 12:36:02 UTC
Review of attachment 293470 [details] [review]:

Looks good as well.
Comment 5 Cosimo Cecchi 2015-01-06 01:02:59 UTC
Thanks for the review!

Attachment 293469 [details] pushed as 488eab8 - GnomeRROutputInfo: plug some memory leaks
Attachment 293470 [details] pushed as 96e28a5 - languages: plug memory leaks