GnomeRROutputInfo: plug some memory leaks

https://bugzilla.gnome.org/show_bug.cgi?id=742111